export enum PaymentMethod {
  EFECTIVE = 'EFECTIVE',
  CREDIT_CARD = 'CREDIT_CARD'
}
